; ModuleID = '/home/carl/AnghaBench/disque/src/extr_networking.c_asyncCloseClientOnOutputBufferLimitReached.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_networking.c_asyncCloseClientOnOutputBufferLimitReached.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }

@SIZE_MAX = common dso_local global i32 0, align 4
@CLIENT_CLOSE_ASAP = common dso_local global i32 0, align 4
@LL_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [78 x i8] c"Client %s scheduled to be closed ASAP for overcoming of output buffer limits.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @asyncCloseClientOnOutputBufferLimitReached(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @SIZE_MAX, align 4
  %8 = sub nsw i32 %7, 65536
  %9 = icmp slt i32 %6, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @serverAssert(i32 %10)
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %1
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @CLIENT_CLOSE_ASAP, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %16, %1
  br label %39

24:                                               ; preds = %16
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %26 = call i64 @checkClientOutputBufferLimits(%struct.TYPE_6__* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %39

28:                                               ; preds = %24
  %29 = call i32 (...) @sdsempty()
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %31 = call i32 @catClientInfoString(i32 %29, %struct.TYPE_6__* %30)
  store i32 %31, i32* %3, align 4
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %33 = call i32 @freeClientAsync(%struct.TYPE_6__* %32)
  %34 = load i32, i32* @LL_WARNING, align 4
  %35 = load i32, i32* %3, align 4
  %36 = call i32 @serverLog(i32 %34, i8* getelementptr inbounds ([78 x i8], [78 x i8]* @.str, i64 0, i64 0), i32 %35)
  %37 = load i32, i32* %3, align 4
  %38 = call i32 @sdsfree(i32 %37)
  br label %39

39:                                               ; preds = %23, %28, %24
  ret void
}

declare dso_local i32 @serverAssert(i32) #1

declare dso_local i64 @checkClientOutputBufferLimits(%struct.TYPE_6__*) #1

declare dso_local i32 @catClientInfoString(i32, %struct.TYPE_6__*) #1

declare dso_local i32 @sdsempty(...) #1

declare dso_local i32 @freeClientAsync(%struct.TYPE_6__*) #1

declare dso_local i32 @serverLog(i32, i8*, i32) #1

declare dso_local i32 @sdsfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
